# statusline-kit

./: README.md  README.zh-CN.md  pyproject.toml
configs/: README.md
configs/claude/: settings.statusline.json
configs/codex/: config.toml
scripts/: install.py
skills/ai-coding-config/: SKILL.md
skills/ai-coding-config/agents/: openai.yaml
src/statusline_kit/: __init__.py  cli.py
tests/: test_statusline.py
