[project]
name = "kt-aicoding-config"
version = "0.1.0"
description = "Claude Code and Codex CLI configuration kit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kt-aicoding" }]

[project.scripts]
kt-aicoding-config = "statusline_kit.cli:main"
kt-statusline = "statusline_kit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
